# logstatter

./: .gitignore  Cargo.toml  Makefile  README.md  build.date  changelog.tmp  sdk9.cfg
.github/workflows/: buldrpm.yml  ci.yml  linux.yml  macos.yml  windows.yml
packaging/rpm/: Makefile  logstatter.spec  rb-logstatter.spec
packaging/rpm/pkgs/: rb-logstatter-0.0.1-1.el9.rb.src.rpm
rpms/: rb-logstatter-0.0.1-1.el9.rb.src.rpm  rb-logstatter-0.0.1-1.el9.rb.x86_64.rpm
src/: cli.rs  config_manager.rs  host.rs  kafka.rs  logstash_client.rs  main.rs
src/etc/: logstatter.conf
src/systemd/: rb-logstatter.service
