[package]
name = "logstatter"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
hostname = "0.3.1"
kafka = "0.10.0"
serde_yaml = "0.9.27"
clap = "2"
serde_json = "1.0"
time = "0.3.30"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3